--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cosmos-kit/keplr": "^2.12.2",
+    "@cosmos-kit/react": "^2.17.2",
+    "@interchain-ui/react": "^1.23.24",
+    "chain-registry": "^1.63.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -32,6 +36,7 @@
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
