--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@cosmos-kit/keplr": "^2.12.2",
     "@cosmos-kit/react": "^2.17.2",
     "@interchain-ui/react": "^1.23.24",
+    "@rainbow-me/rainbowkit": "2",
+    "@tanstack/react-query": "^5.50.1",
     "chain-registry": "^1.63.15",
+    "ethers": "5.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "2.x",
+    "wagmi": "2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
