--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 VITE_APP_WALLET_CONNECT_PROJECT_ID=
+VITE_BASE_SEPOLIA_SAFE=
+VITE_OPTIMISM_SEPOLIA_SAFE=
+VITE_ARBITRUM_SEPOLIA_SAFE=
+VITE_BINANCE_TESTNET_SAFE=
+VITE_SEPOLIA_SAFE=
+VITE_FUJI_SAFE=
+VITE_AVALANCHE=
+VITE_ARBITRUM=
+VITE_OPTIMISM=
+VITE_BASE=
